tests/snapshots/integration__integration_tests__switch__switch_with_execute_trailing_args_metachars_exec.snap
---
source: tests/integration_tests/switch.rs
expression: "&exec_contents"
---
echo '$x'\''s hello' 'with space'
